--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+<!-- Connects to layout -->
 {% block content %}
-	<h1>About</h1>
+<h1>About</h1>
+<!-- Creates a block which contains the unique content-->
 {% endblock content %}
+<!-- content is not compulsory but is added to mark the end of the above block-->
